[gd_scene load_steps=2 format=3 uid="uid://dx1bowb35cbtm"]

[ext_resource type="Script" path="res://playground/scripts/character_slot_button.gd" id="1_mtcx8"]

[node name="CharacterSlotSelectButton" type="Button"]
custom_minimum_size = Vector2(0, 100)
offset_right = 416.0
offset_bottom = 100.0
script = ExtResource("1_mtcx8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FirstName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "UNDEFINED"

[node name="LastName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "UNDEFINED"

[node name="Nickname" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "(UNDEFINED)"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DateLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "Date:"

[node name="Date" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "01/01/XX09"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "Location:"

[node name="Location" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "Unknown"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "Level: "

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.498039)
text = "??"

[connection signal="pressed" from="." to="." method="_on_pressed"]
